--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -87,7 +87,6 @@ podTemplate(
                     """
                 }
             }
-
             container('helm') {
                 stage ('Install Chart') {
                     sh """
@@ -123,55 +122,6 @@ podTemplate(
                     """
                 }
             }
-            container('kubectl') {
-                stage ('Cleanup Helm Install Jobs') {
-                    sh """
-                    #!/bin/bash
-                    set -x
-                    
-                    # Delete all helm jobs for this chart
-                    cd chart/bc-customer
-                    chart_name=`yaml read Chart.yaml name`
-                    chart_version=`yaml read Chart.yaml version`
-                    
-                    kubectl delete jobs -l chart=\${chart_name}-\${chart_version}
-                    """
-                }
-            }
-            container('docker') {
-                stage ('Cleanup Old Images') {
-                    sh """
-                    #!/bin/bash
-                    set -x
-
-                    export BLUEMIX_API_KEY=`cat /var/run/secrets/bluemix-api-key/api-key`
-                    BX_SPACE=`cat /var/run/configs/bluemix-target/bluemix-space`
-                    BX_API_ENDPOINT=`cat /var/run/configs/bluemix-target/bluemix-api-endpoint`
-                    BX_REGISTRY=`cat /var/run/configs/bluemix-target/bluemix-registry`
-                    BX_NAMESPACE=`cat /var/run/configs/bluemix-target/bluemix-registry-namespace`
-
-                    # Bluemix Login
-                    bx login -a \${BX_API_ENDPOINT} -s \${BX_SPACE}
-
-                    # initialize docker using container registry secret
-                    bx cr login
-
-                    # all images
-                    all_images=`bx cr image-list -q | grep \${BX_REGISTRY} | grep \${BX_NAMESPACE} | grep bc-customer`
-
-                    MAX_BUILD=\$((${env.BUILD_NUMBER} - 1))
-                    for i in `seq 1 \${MAX_BUILD}`; do
-                        # delete images smaller than current build
-                        if [ -z `echo \${all_images} | grep \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i}` ]; then
-                            continue
-                        fi
-                        echo "Deleting \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i} ..."
-                        bx cr image-rm \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i}
-                    done
-                    
-                    """
-                }
-            }
         } catch (exception) {
             container('docker') {
                 stage ('Cleanup Bad Image') {
@@ -196,6 +146,57 @@ podTemplate(
                 }
             }
 
+        }
+
+        container('kubectl') {
+            stage ('Cleanup Helm Install Jobs') {
+                sh """
+                #!/bin/bash
+                set -x
+                
+                # Delete all helm jobs for this chart
+                cd chart/bc-customer
+                chart_name=`yaml read Chart.yaml name`
+                chart_version=`yaml read Chart.yaml version`
+                
+                kubectl delete jobs -l chart=\${chart_name}-\${chart_version}
+                """
+            }
+        }
+        container('docker') {
+            stage ('Cleanup Old Images') {
+                sh """
+                #!/bin/bash
+                set -x
+
+                export BLUEMIX_API_KEY=`cat /var/run/secrets/bluemix-api-key/api-key`
+                BX_SPACE=`cat /var/run/configs/bluemix-target/bluemix-space`
+                BX_API_ENDPOINT=`cat /var/run/configs/bluemix-target/bluemix-api-endpoint`
+                BX_REGISTRY=`cat /var/run/configs/bluemix-target/bluemix-registry`
+                BX_NAMESPACE=`cat /var/run/configs/bluemix-target/bluemix-registry-namespace`
+
+                # Bluemix Login
+                bx login -a \${BX_API_ENDPOINT} -s \${BX_SPACE}
+
+                # initialize docker using container registry secret
+                bx cr login
+
+                # find out which images to delete -- keep last N images in the registry
+                MAX_IMAGES_TO_KEEP=3
+                all_images=`bx cr image-list -q | grep \${BX_REGISTRY} | grep \${BX_NAMESPACE} | grep bc-customer`
+                all_image_tags=`echo "\${all_images}" | awk -F: '{print \$2;}' | sort -n`
+                total_num_images=`echo "\${all_images}" | wc -l | awk '{print \$1;}'`
+                num_to_delete=\$((total_num_images - MAX_IMAGES_TO_KEEP))
+                images_to_delete=`echo "\${all_image_tags}" | sort -n | head -n \${num_to_delete}`
+
+                for i in \${images_to_delete}; do
+                    # delete images smaller than current build
+                    echo "Deleting \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i} ..."
+                    bx cr image-rm \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i}
+                done
+                
+                """
+            }
         }
     }
 }
