--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -140,7 +140,11 @@ podTemplate(
 
                     # initialize docker using container registry secret
                     bx cr login
+
+                    set +e
+                    # delete the build
                     bx cr image-rm \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:${env.BUILD_NUMBER}
+                    set -e
                    
                     """
                 }
@@ -183,7 +187,13 @@ podTemplate(
 
                 # find out which images to delete -- keep last N images in the registry
                 MAX_IMAGES_TO_KEEP=3
+                set +e
                 all_images=`bx cr image-list -q | grep \${BX_REGISTRY} | grep \${BX_NAMESPACE} | grep bc-customer`
+
+                if ( -z \${all_images} ]; then
+                    exit 0
+                fi
+
                 all_image_tags=`echo "\${all_images}" | awk -F: '{print \$2;}' | sort -n`
                 total_num_images=`echo "\${all_images}" | wc -l | awk '{print \$1;}'`
 
@@ -199,6 +209,8 @@ podTemplate(
                     echo "Deleting \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i} ..."
                     bx cr image-rm \${BX_REGISTRY}/\${BX_NAMESPACE}/bc-customer:\${i}
                 done
+
+                set -e
                 
                 """
             }
