--- a/chart/bluecompute-customer/templates/bind_cloudantdb.yaml
+++ b/chart/bluecompute-customer/templates/bind_cloudantdb.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Release.Name}}-bind-cloudantdb"
+  name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}"
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
@@ -14,7 +14,7 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{.Release.Name}}-bind-cloudantdb"
+      name: "{{.Chart.Name}}-bind-cloudantdb-{{.Release.Name}}"
       labels:
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
