--- a/chart/bluecompute-customer/templates/create_hs256_key.yaml
+++ b/chart/bluecompute-customer/templates/create_hs256_key.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Release.Name}}-create-hs256-key"
+  name: "{{.Chart.Name}}-create-hs256-key-{{.Release.Name}}"
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
@@ -14,7 +14,7 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{.Release.Name}}-create-hs256-key"
+      name: "{{.Chart.Name}}-create-hs256-key-{{.Release.Name}}"
       labels:
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
